--- a/javascript/goit-js-hw-12-countries/package.json
+++ b/javascript/goit-js-hw-12-countries/package.json
@@ -52,6 +52,8 @@
     "core-js": "^3.6.4",
     "handlebars": "^4.7.6",
     "imagemin": "^6.1.0",
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "material-design-icons": "^3.0.1",
+    "pnotify": "^5.1.2"
   }
 }
