--- a/javascript/goit-js-hw-13-image-finder/package.json
+++ b/javascript/goit-js-hw-13-image-finder/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Aztek2008/goit-fe-course/tree/master/javascript/goit-js-hw-12-countries"
+    "url": "git+https://github.com/Aztek2008/goit-fe-course/tree/master/javascript/goit-js-hw-13-image-finder"
   },
   "keywords": [],
   "author": "Oleksii Skopiuk <aztek2008@gmail.com>",
@@ -52,8 +52,8 @@
     "core-js": "^3.6.4",
     "handlebars": "^4.7.6",
     "imagemin": "^6.1.0",
-    "lodash.debounce": "^4.0.8",
-    "material-design-icons": "^3.0.1",
-    "pnotify": "^5.1.2"
+    "infinite-scroll": "^3.0.6",
+    "masonry-layout": "^4.2.2",
+    "material-design-icons": "^3.0.1"
   }
 }
